Fix overlay issue introduced by TinyMCE z-index changes in 4.8.1

--- a/src/css/builder/core/builder.css
+++ b/src/css/builder/core/builder.css
@@ -494,7 +494,7 @@
 -------------------------------------------------------- */
 .ttfmake-overlay {
 	display: none;
-	z-index: 99999;
+	z-index: 50000;
 	tabindex: 0;
 	position: fixed;
 	top: 0; /*reset*/
